fixed upload button overlapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -694,7 +694,7 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  z-index: 990;
+  
 }
 
 .download-button:hover {
